# easypub

./: .envrc  .gitignore  .pre-commit-config.yaml  .profile  MANIFEST.in  Procfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yml
requirements/: app.txt  dev.txt  test.txt
src/easypub/: __init__.py  asgi.py  caching.py  config.py  decorators.py  endpoints.py  fields.py  manage.py  middleware.py  routes.py  utils.py
src/easypub/static/: admin.js  base.css  common.js  index.css  index.js  intro.html
src/easypub/templates/: admin.html  base.html  index.html  read.html
tests/: mocks.py  test_caching.py  test_decorators.py  test_endpoints.py  test_fields.py  test_middleware.py  test_utils.py
