[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"
known_starlette = "starlette"
sections = "FUTURE,STDLIB,THIRDPARTY,STARLETTE,FIRSTPARTY,LOCALFOLDER"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = true
plugins = "pydantic.mypy"
